--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jspdf": "^3.0.4",
     "lucide-react": "^0.562.0",
     "next": "16.1.0",
+    "next-sitemap": "^4.2.3",
     "react": "19.2.3",
     "react-dom": "19.2.3"
   },
